--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,8 @@ extends layout
 block content
   h1= title
   p  services of project tocai.
+  a(href='http://40.121.33.135:8080/users') users
+  <br>
+  a(href='http://40.121.33.135:8080/events') events
+
   
